Bug 268135 - "report bug" from inside the chat handler goes to the wrong application
Summary: "report bug" from inside the chat handler goes to the wrong application
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-10 16:01 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
online (144.84 KB, image/png)
2011-03-21 17:41 UTC, Alin M Elena
Details
offline (152.19 KB, image/png)
2011-03-21 17:42 UTC, Alin M Elena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-03-10 16:01:12 UTC
Version:           unspecified
OS:                Linux



Reproducible: Didn't try
Comment 1 David Edmundson 2011-03-10 16:01:49 UTC
"Sorry, either the product telepathy-chat-handler does not exist or you aren't authorized to enter a bug into it."

when trying to report a bug with the report bug button
Comment 2 Alin M Elena 2011-03-21 17:41:49 UTC
Created attachment 58216 [details]
online
Comment 3 Alin M Elena 2011-03-21 17:42:12 UTC
Created attachment 58217 [details]
offline
Comment 4 Alin M Elena 2011-03-21 17:42:42 UTC
just checked it... it works
Comment 5 David Edmundson 2011-03-23 00:41:20 UTC
Git commit 9e65075eac0fa41ae6fff3bc8e865a128c746248 by David Edmundson.
Committed on 22/03/2011 at 03:08.
Pushed by davidedmundson into branch 'master'.

Set product name for correct bug reporting

REVIEW: 100912
BUG: 268135

M  +1    -0    app/main.cpp     

http://commits.kde.org/telepathy-chat-handler/9e65075eac0fa41ae6fff3bc8e865a128c746248