Set product name for correct bug reporting

REVIEW: 100912
BUG: 268135